# telkom-domain-older-version

./: .gitignore  Cargo.toml  README.md  apishome.html  apissettings.html  apissettingsquickstart.html  aplications_home.html  app.html  appSetting.html  application.html  applications_home_with_nav.html  codeeditor.html  database.css  database.html  index.css  index.html  index.js  main.js  mockend.json  modal.html  navtop.html  nodejs.html  package-lock.json  settings.html  sidebar.html  social.html  sso-create.html  style-backup.scss  style.scss  test.css  webpack.config.js
server-test/: index.js  package-lock.json
server-test/controllers/: ControllerApi.js  ControllerApp.js  ControllerRoles.js  ControllerSettings.js  ControllerUsers.js  index.js
server-test/middlewares/: authentication.js
server-test/routes/: RouterApi.js  RouterApp.js  RouterRoles.js  RouterSettings.js  RouterUser.js  index.js
src/: app.html  app.rs  lib.rs
src/components/: developers_note.rs  landing_page_navtop.rs  loading.rs  loading2.rs  logo.rs  logo2.rs  mod.rs  navtop.rs  sidebar.rs  tag_inactive.rs
src/configs/: server.rs
src/pages/: activity.rs  details.rs  getting_started.rs  home.rs  home_page.rs  home_page.scss  mod.rs  reducer_account_view.rs  reducer_global.rs  testing_fetch.rs
src/pages/applications/: mod.rs
src/pages/authentication/: mod.rs
src/store/: mod.rs  reducer.rs  reducer_account.rs  types.rs
src/types/: api.rs  application.rs  mod.rs  roles.rs  settings.rs  users.rs
static/: index.html
static-html/: sidebar-telkom(bootstap).html
(+70 files in other folders)
