[package]
name = "telkom-domain"
version = "0.1.0"
authors = ["hackerrank <me@hackerrank.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.19"
strum_macros = "0.19"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew="0.18"
yew-router = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
yewdux = "^0.6"
yewtil = "^0.4.0"
anyhow = "1.0.42"
css-in-rust = { version = "^0.5.0", features = ["yew_integration"] }
state = { version = "0.5", features = ["tls"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
